--- a/Advance_DeepLearning_Titanic予測-github.ipynb
+++ b/Advance_DeepLearning_Titanic予測-github.ipynb
@@ -671,7 +671,41 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "#モデルを作成\n",
+    "\n",
+    "from chainer.dataset import iterator\n",
+    "from chainer.iterators import SerialIterator\n",
+    "from chainer import Chain\n",
+    "from chainer.training import Trainer\n",
+    "from chainer.training import StandardUpdater\n",
+    "import numpy as np\n",
+    "import chainer.links as L\n",
+    "from chainer.optimizers import AdaGrad, SGD, MomentumSGD,Adam\n",
+    "from chainer.datasets import TupleDataset\n",
+    "from chainer.training.extensions import ProgressBar\n",
+    "from chainer.training.extensions import Evaluator\n",
+    "from chainer.training.extensions import PrintReport\n",
+    "from chainer.training.extensions import LogReport\n",
+    "import chainer.functions as F\n",
+    "from chainer import Variable\n",
+    "from chainer.optimizer import WeightDecay\n",
+    "from chainer.functions.loss import sigmoid_cross_entropy\n",
+    "\n",
+    "n_examples = len(x_train)\n",
+    "\n",
+    "class TitanicModel(Chain):\n",
+    "    def __init__(self):\n",
+    "        super(TitanicModel, self).__init__()\n",
+    "        with self.init_scope():\n",
+    "            self.lin1=L.Linear(None, 100)\n",
+    "            self.lin2 = L.Linear(None,1)\n",
+    "    \n",
+    "    def __call__(self, x):\n",
+    "        h = self.lin1(x)\n",
+    "        h = self.lin2(h)\n",
+    "        return h"
+   ]
   },
   {
    "cell_type": "code",
@@ -704,7 +738,40 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "\n",
+    "#ここから以下は学習\n",
+    "\n",
+    "train_data = [(x_train[i,:], y_train[i]) for i in range(n_examples)]\n",
+    "train_iterator = SerialIterator(train_data, batch_size=n_examples, repeat=True, shuffle=True)\n",
+    "titanic_model = TitanicModel()\n",
+    "classifier = L.Classifier(titanic_model,lossfun=sigmoid_cross_entropy.sigmoid_cross_entropy)\n",
+    "##ComputeAccuracyをFalseにしないとエラーになる\n",
+    "classifier.compute_accuracy = False\n",
+    "optimizer = Adam()\n",
+    "\n",
+    "\n",
+    "optimizer.setup(classifier)\n",
+    "\n",
+    "updater = StandardUpdater(train_iterator, optimizer, loss_func=classifier)\n",
+    "trainer = Trainer(updater, (1000, 'iteration'))\n",
+    "trainer.extend(PrintReport(['iteration', \"main/loss\"]))\n",
+    "logreport = LogReport(trigger=(100, 'iteration'))\n",
+    "trainer.extend(logreport)\n",
+    "trainer.run()\n",
+    "\n",
+    "\n",
+    "#ここから以下は予測と提出データ用作成\n",
+    "\n",
+    "test_pred = F.sigmoid(titanic_model(x_test)).data\n",
+    "test_pred = (test_pred.reshape(len(x_test),) > 0.5).astype(np.int32)\n",
+    "# print test_pred\n",
+    "submission = pd.DataFrame({\n",
+    "        \"PassengerId\":df_test[\"PassengerId\"],\n",
+    "        \"Survived\": test_pred\n",
+    "    })\n",
+    "submission.to_csv('titanic.csv', index=False)\n"
+   ]
   },
   {
    "cell_type": "code",
