--- a/Advance_DeepLearning_Titanic予測-github.ipynb
+++ b/Advance_DeepLearning_Titanic予測-github.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "4  2_quartile     N      Allen,        Mr.  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,37 +417,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#バイナリデータの作成\n",
-    "\n",
-    "from sklearn import preprocessing\n",
-    "def binarize_features(df_train, df_test):\n",
-    "    features = ['Pclass', 'Sex','Age','Fare' ]\n",
-    "    df_combined = pd.concat([df_train[features], df_test[features]])\n",
-    "    df_lb_train = pd.DataFrame()\n",
-    "    df_lb_test = pd.DataFrame()\n",
-    "\n",
-    "    for feature in features:\n",
-    "        lb = preprocessing.LabelBinarizer()\n",
-    "        lb = lb.fit(df_combined[feature])\n",
-    "#         lb_train = lb.transform(df_train[feature])\n",
-    "#         lb_test = lb.transform(df_test[feature])\n",
-    "        df_lb_train= pd.concat([df_lb_train, pd.DataFrame(lb.transform(df_train[feature]))], axis=1)\n",
-    "        df_lb_test= pd.concat([df_lb_test, pd.DataFrame(lb.transform(df_test[feature]))], axis=1)\n",
-    "                                \n",
-    "    return df_lb_train, df_lb_test\n",
-    "\n",
-    "df_lb_train, df_lb_test = binarize_features(df_train, df_test)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -604,35 +583,25 @@
        "4  0  0  1  1  0  0  0  0  0  0  0  1  0  1  0  0  0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df_lb_train.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#トレーニングデータとテストデータの生成\n",
-    "\n",
-    "#学習データはfloat型、テストデータはint型にする\n",
-    "x_train= df_lb_train.values.astype(np.float32)\n",
-    "y_train = df_train[\"Survived\"].values\n",
-    "y_train = y_train.reshape(len(y_train),1).astype(np.int32)\n",
-    "x_test = df_lb_test.values.astype(np.float32)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -647,65 +616,28 @@
        "       [0., 0., 1., ..., 0., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "#データの確認\n",
-    "x_train"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/yuza/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "/Users/kenji_tachibana/.pyenv/versions/anaconda3-4.3.0/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
     }
    ],
-   "source": [
-    "#モデルを作成\n",
-    "\n",
-    "from chainer.dataset import iterator\n",
-    "from chainer.iterators import SerialIterator\n",
-    "from chainer import Chain\n",
-    "from chainer.training import Trainer\n",
-    "from chainer.training import StandardUpdater\n",
-    "import numpy as np\n",
-    "import chainer.links as L\n",
-    "from chainer.optimizers import AdaGrad, SGD, MomentumSGD,Adam\n",
-    "from chainer.datasets import TupleDataset\n",
-    "from chainer.training.extensions import ProgressBar\n",
-    "from chainer.training.extensions import Evaluator\n",
-    "from chainer.training.extensions import PrintReport\n",
-    "from chainer.training.extensions import LogReport\n",
-    "import chainer.functions as F\n",
-    "from chainer import Variable\n",
-    "from chainer.optimizer import WeightDecay\n",
-    "from chainer.functions.loss import sigmoid_cross_entropy\n",
-    "\n",
-    "n_examples = len(x_train)\n",
-    "\n",
-    "class TitanicModel(Chain):\n",
-    "    def __init__(self):\n",
-    "        super(TitanicModel, self).__init__()\n",
-    "        with self.init_scope():\n",
-    "            self.lin1=L.Linear(None, 100)\n",
-    "            self.lin2 = L.Linear(None,1)\n",
-    "    \n",
-    "    def __call__(self, x):\n",
-    "        h = self.lin1(x)\n",
-    "        h = self.lin2(h)\n",
-    "        return h"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -718,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -726,9 +658,9 @@
      "output_type": "stream",
      "text": [
       "iteration   main/loss \n",
-      "\u001b[J100         0.494807    \n",
-      "\u001b[J200         0.439362    \n",
-      "\u001b[J300         0.438086    \n",
+      "\u001b[J100         0.556185    \n",
+      "\u001b[J200         0.450288    \n",
+      "\u001b[J300         0.438324    \n",
       "\u001b[J400         0.438085    \n",
       "\u001b[J500         0.438085    \n",
       "\u001b[J600         0.438085    \n",
@@ -738,40 +670,7 @@
      ]
     }
    ],
-   "source": [
-    "\n",
-    "#ここから以下は学習\n",
-    "\n",
-    "train_data = [(x_train[i,:], y_train[i]) for i in range(n_examples)]\n",
-    "train_iterator = SerialIterator(train_data, batch_size=n_examples, repeat=True, shuffle=True)\n",
-    "titanic_model = TitanicModel()\n",
-    "classifier = L.Classifier(titanic_model,lossfun=sigmoid_cross_entropy.sigmoid_cross_entropy)\n",
-    "##ComputeAccuracyをFalseにしないとエラーになる\n",
-    "classifier.compute_accuracy = False\n",
-    "optimizer = Adam()\n",
-    "\n",
-    "\n",
-    "optimizer.setup(classifier)\n",
-    "\n",
-    "updater = StandardUpdater(train_iterator, optimizer, loss_func=classifier)\n",
-    "trainer = Trainer(updater, (1000, 'iteration'))\n",
-    "trainer.extend(PrintReport(['iteration', \"main/loss\"]))\n",
-    "logreport = LogReport(trigger=(100, 'iteration'))\n",
-    "trainer.extend(logreport)\n",
-    "trainer.run()\n",
-    "\n",
-    "\n",
-    "#ここから以下は予測と提出データ用作成\n",
-    "\n",
-    "test_pred = F.sigmoid(titanic_model(x_test)).data\n",
-    "test_pred = (test_pred.reshape(len(x_test),) > 0.5).astype(np.int32)\n",
-    "# print test_pred\n",
-    "submission = pd.DataFrame({\n",
-    "        \"PassengerId\":df_test[\"PassengerId\"],\n",
-    "        \"Survived\": test_pred\n",
-    "    })\n",
-    "submission.to_csv('titanic.csv', index=False)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
