--- a/Advance_DeepLearning_Titanic予測-github.ipynb
+++ b/Advance_DeepLearning_Titanic予測-github.ipynb
@@ -422,7 +422,28 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#バイナリデータの作成\n",
+    "\n",
+    "from sklearn import preprocessing\n",
+    "def binarize_features(df_train, df_test):\n",
+    "    features = ['Pclass', 'Sex','Age','Fare' ]\n",
+    "    df_combined = pd.concat([df_train[features], df_test[features]])\n",
+    "    df_lb_train = pd.DataFrame()\n",
+    "    df_lb_test = pd.DataFrame()\n",
+    "\n",
+    "    for feature in features:\n",
+    "        lb = preprocessing.LabelBinarizer()\n",
+    "        lb = lb.fit(df_combined[feature])\n",
+    "#         lb_train = lb.transform(df_train[feature])\n",
+    "#         lb_test = lb.transform(df_test[feature])\n",
+    "        df_lb_train= pd.concat([df_lb_train, pd.DataFrame(lb.transform(df_train[feature]))], axis=1)\n",
+    "        df_lb_test= pd.concat([df_lb_test, pd.DataFrame(lb.transform(df_test[feature]))], axis=1)\n",
+    "                                \n",
+    "    return df_lb_train, df_lb_test\n",
+    "\n",
+    "df_lb_train, df_lb_test = binarize_features(df_train, df_test)"
+   ]
   },
   {
    "cell_type": "code",
@@ -588,7 +609,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df_lb_train.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -597,7 +620,15 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#トレーニングデータとテストデータの生成\n",
+    "\n",
+    "#学習データはfloat型、テストデータはint型にする\n",
+    "x_train= df_lb_train.values.astype(np.float32)\n",
+    "y_train = df_train[\"Survived\"].values\n",
+    "y_train = y_train.reshape(len(y_train),1).astype(np.int32)\n",
+    "x_test = df_lb_test.values.astype(np.float32)"
+   ]
   },
   {
    "cell_type": "code",
@@ -621,7 +652,10 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#データの確認\n",
+    "x_train"
+   ]
   },
   {
    "cell_type": "code",
